parser/src/snapshots/emerald_lang_parser__parser__tests__do_blocks_inside_assignment.snap
---
source: src/parser.rs
expression: "parse_program(source, \"<test>\").unwrap()"
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 1,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "a",
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 4,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 14,
                    },
                ),
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 1,
                            column: 4,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 12,
                            },
                        ),
                        custom: (),
                        node: Name {
                            id: "some_fun",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 15,
                            },
                            end_location: Some(
                                Location {
                                    row: 3,
                                    column: 0,
                                },
                            ),
                            custom: (),
                            node: DoBlock {
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [],
                                },
                                body: [
                                    Located {
                                        location: Location {
                                            row: 2,
                                            column: 2,
                                        },
                                        end_location: Some(
                                            Location {
                                                row: 2,
                                                column: 22,
                                            },
                                        ),
                                        custom: (),
                                        node: Expr {
                                            value: Located {
                                                location: Location {
                                                    row: 2,
                                                    column: 2,
                                                },
                                                end_location: Some(
                                                    Location {
                                                        row: 2,
                                                        column: 22,
                                                    },
                                                ),
                                                custom: (),
                                                node: Call {
                                                    func: Located {
                                                        location: Location {
                                                            row: 2,
                                                            column: 2,
                                                        },
                                                        end_location: Some(
                                                            Location {
                                                                row: 2,
                                                                column: 7,
                                                            },
                                                        ),
                                                        custom: (),
                                                        node: Name {
                                                            id: "print",
                                                            ctx: Load,
                                                        },
                                                    },
                                                    args: [
                                                        Located {
                                                            location: Location {
                                                                row: 2,
                                                                column: 8,
                                                            },
                                                            end_location: Some(
                                                                Location {
                                                                    row: 2,
                                                                    column: 21,
                                                                },
                                                            ),
                                                            custom: (),
                                                            node: Constant {
                                                                value: Str(
                                                                    "Hello world",
                                                                ),
                                                                kind: None,
                                                            },
                                                        },
                                                    ],
                                                    keywords: [],
                                                },
                                            },
                                        },
                                    },
                                ],
                            },
                        },
                    ],
                    keywords: [],
                },
            },
            type_comment: None,
        },
    },
    Located {
        location: Location {
            row: 3,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 3,
                column: 11,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 3,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 3,
                        column: 11,
                    },
                ),
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 3,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 3,
                                column: 5,
                            },
                        ),
                        custom: (),
                        node: Name {
                            id: "print",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 3,
                                column: 6,
                            },
                            end_location: Some(
                                Location {
                                    row: 3,
                                    column: 10,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "ok",
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [],
                },
            },
        },
    },
]
